prog/1stPartyLibs/quirrel/quirrel/testData/exec/runtime_type_check/assign_wrong_type_03.out
ERROR: expression of type 'table' cannot be assigned to type 'array'
testData/exec/runtime_type_check/assign_wrong_type_03.nut:3:0

y.append(333)
y = {}
^
return y


Error [Failed to compile file testData/exec/runtime_type_check/assign_wrong_type_03.nut (testData/exec/runtime_type_check/assign_wrong_type_03.nut)]
